--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,10 @@
     "start": "tsx src/server.ts",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "seed-guides": "tsx src/seedData/seedGuides.ts"
+    "seed-guides": "tsx src/seedData/seedGuides.ts",
+    "db:setup": "tsx src/db/setup.ts",
+    "db:reset": "tsx src/db/setup.ts && npm run seed-guides",
+    "setup": "npm run db:setup && npm run seed-guides"
   },
   "keywords": [],
   "author": "",
