--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "@mui/x-charts": "^8.10.2",
     "axios": "^1.11.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
