--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,15 +1,20 @@
 {
   "compilerOptions": {
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "strictNullChecks": true,
-    "strictPropertyInitialization": true,
-    "strictBindCallApply": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
+    "target": "ES2022",
+    "module": "ESNext",
+    "moduleResolution": "node", 
+    "lib": ["ES2020"],
+    "outDir": "./dist",
+    "rootDir": "./src",
     "esModuleInterop": true,
-    "declaration": true,
-  }
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
+    "types": ["node"],
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
