--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "openai": "^5.13.1",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "tsx": "^4.20.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
@@ -32,7 +33,6 @@
     "@types/node": "^24.3.0",
     "@types/pg": "^8.15.5",
     "supertest": "^7.1.4",
-    "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   }
