--- a/frontend/.github/workflows/pipeline.yml
+++ b/frontend/.github/workflows/pipeline.yml
@@ -1,36 +1,9 @@
 name: CI/CD Pipeline
 on:
   push:
-    branches:
-      - main
-  pull_request:
     branches: [main]
-    types: [opened, synchronize]
 
 jobs:
-  backend-tests:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
-          cache: "npm"
-          cache-dependency-path: backend/package-lock.json
-      - name: Install backend dependencies
-        run: |
-          cd backend
-          npm ci
-      - name: Run backend tests
-        run: |
-          cd backend
-          npm test
-        env:
-          NODE_ENV: test
-          DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-
   frontend-build:
     runs-on: ubuntu-latest
     steps:
@@ -38,8 +11,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: lts/*
-          cache: "npm"
+          node-version: 18
+          cache: npm
           cache-dependency-path: frontend/package-lock.json
       - name: Install frontend dependencies
         run: |
@@ -52,7 +25,7 @@ jobs:
 
   e2e-tests:
     runs-on: ubuntu-latest
-    needs: [backend-tests, frontend-build]
+    needs: [frontend-build]
     services:
       postgres:
         image: postgres:13
@@ -71,8 +44,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: lts/*
-          cache: "npm"
+          node-version: 18
       - name: Install backend dependencies
         run: |
           cd backend
@@ -81,39 +53,59 @@ jobs:
         run: |
           cd frontend
           npm ci
-      - name: Setup test database
+      - name: Setup test database with pgvector
+        run: |
+          sudo apt-get update
+          sudo apt-get install postgresql-client
+          PGPASSWORD=test psql -h localhost -U postgres -d turnip_test -c "CREATE EXTENSION IF NOT EXISTS vector;"
+          PGPASSWORD=test psql -h localhost -U postgres -d turnip_test -f - << 'EOF'
+          CREATE TABLE guides (
+            id SERIAL PRIMARY KEY,
+            title VARCHAR(255) NOT NULL,
+            content TEXT NOT NULL,
+            embedding vector(1536),
+            created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP
+          );
+          CREATE TABLE turnip_weeks (
+            id SERIAL PRIMARY KEY,
+            week_date DATE NOT NULL,
+            pattern_type VARCHAR(50) NOT NULL CHECK (pattern_type IN ('large_spike', 'small_spike', 'decreasing', 'random')),
+            prices JSONB NOT NULL,
+            created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP
+          );
+          EOF
+      - name: Start backend server
         run: |
           cd backend
-          npm run setup
+          npm start &
+          sleep 10
         env:
           DATABASE_URL: postgresql://postgres:test@localhost:5432/turnip_test
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-      - name: Seed test database
-        run: |
-          cd backend
-          npm run seed-guides
-        env:
-          DATABASE_URL: postgresql://postgres:test@localhost:5432/turnip_test
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-      - name: Install Playwright Browsers
+          OPENAI_API_KEY: mock_key_for_testing
+          NODE_ENV: test
+      - name: Start frontend server
         run: |
           cd frontend
-          npx playwright install --with-deps
+          npm run dev &
+          sleep 10
+        env:
+          VITE_API_URL: http://localhost:3001/api
+      - name: Install Playwright browsers
+        run: |
+          cd frontend
+          npx playwright install --with-deps chromium
       - name: Run E2E tests
         run: |
           cd frontend
           npm run test:e2e
-        env:
-          VITE_API_URL: http://localhost:3001/api
-          DATABASE_URL: postgresql://postgres:test@localhost:5432/turnip_test
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [backend-tests, frontend-build, e2e-tests]
-    if: github.ref == 'refs/heads/main'
+    needs: [frontend-build, e2e-tests]
+    if: success()
     steps:
-      - name: Deployment Status
+      - name: All tests passed - Ready for deployment
         run: |
-          echo "All tests passed!"
+          echo "Frontend build: ✓"
+          echo "E2E tests: ✓"
           echo "Vercel will automatically deploy to production"
